Version 3.9.24
- Fixed a crash when enums are declared in structs

Version 3.9.23
- Caught some cases where function redefinitions were not flagged as errors
- Fixed an optimizer crash when inlining functions containing REP
- Fixed rep count calculation when an augment is needed for large immediate repetitions
- Implemented work-around in CLKSET for RCFAST setting issue
- Allow fcache on P2; must be explicitly enabled though
- Fixed filename extension bug in C/C++ output
- Fixed C++ output for the serial printf functions
- Fixed some problems with output of method calls in spin2cpp output
- Changed the way @@@ relocation is done, and made some P2
  instructions use it so that HUB references work even if there are
  Spin methods present.
- Allow Unicode characters above 0x7f in PASM expressions
- When parsing a UCS-16 file without a preprocessor, convert characters to UTF-8

Version 3.9.22
- Made sure C enums start at 0
- Do not change the order of class declarations, so that sizes can be
  properly calculated
- Always put array variables on the stack
- Fixed some type promotion problems in C
- Fixed a pointer offset bug that affected all languages
- Fixed loop strength reduction of the '?' operator

Version 3.9.21
- Increased stack size on Windows to prevent a crash
- Added if_00, if_same, and other missing P2 conditions
- Fixed an incorrect result for ">| 0" on P2
- Added some P2 specific optimizations
- Added Spin serial drivers to default include directory
- Rewrote C static and variable handling code to fix a number of bugs
  and to allow nested variable scopes to work
- Fixed an optimizer bug where register masks could be created before
  the variables they dependend on were initialized
- Fixed a P2 optimizer bug affecting varargs
- Fixed several C type casting bugs including conversion of arrays and
  functions to pointers
- Fixed handling of enums in C
- Fixed checking for duplicate labels
- Added some standard Spin serial routines to the include/spin folder